Fix Download & deleting Carver/ folder
Carver folder was useless. Download didn't worked

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@
         padding-left: 15px;
         padding-right: 15px;
     }
-    .frame .bs-base ul li {
+    .frame .cr-base ul li {
         display: block;
     }
     #tablet-svg,
@@ -236,7 +236,7 @@
     }
 }
 
-.grid-bs .row {
+.grid-cr .row {
     .cl-8 .cl {
         height: 2.8444rem;
         border-radius: .28571429rem;
@@ -254,7 +254,7 @@
     }
 }
 
-#build-yours-bs {
+#build-yours-cr {
     background-image: -webkit-linear-gradient(179deg, #81c784, rgba(0, 0, 0, 0.052));
     background-image: linear-gradient(179deg, #81c784, rgba(0, 0, 0, 0.052));
     color: #fff;
