--- a/stylesheets/basesign.css
+++ b/stylesheets/basesign.css
@@ -1,4 +1,5 @@
 /* This file is SCSS-free. CSS only. */
+/* OUUTDATED VERSOP, CHECK https://stabla.github.io/Basesign/ TO HAVE MOST RECENT VERSION */
 
 * {
     box-sizing: border-box;
