--- a/sass/carver.scss
+++ b/sass/carver.scss
@@ -1,8 +1,4 @@
-
-// Miniscule and the ground of the project. If this no, then nothing.
-// @import "Carver_light.scss";
-
-// Core
+// Tools
 @import "cr_grid.scss";
 @import "cr_nav.scss";
 
@@ -12,6 +8,3 @@
 
 // If you don't use ClaCss.js
 @import "cr_noClaCss.scss";
-
-// If you want some more functionnality
-//@import "cr_bonus.scss";
